[package]
name = "type-inf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cranelift-isle = { git = "https://github.com/avanhatt/wasmtime.git" }
veri_ir = { git = "https://github.com/avanhatt/wasmtime.git" }

easy-smt = { git = "https://github.com/elliottt/easy-smt.git" }
itertools = "0.12.1"
strum = "0.26.2"
strum_macros = "0.26.2"
